updated user info get handler.
- now it retrieves user info by parsing claims data.
