# task-manager/docs/swagger.json
@@ -189,6 +189,11 @@
         },
         "/api/v1/users": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Returns authenticated user",
                 "produces": [
                     "application/json"
